Astro/astro-tests/testData/codeInsight/inspections/missingTsSymbolImport.astro
{<error descr="Unresolved variable or type Colors">Co<caret>lors</error>}